<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Background"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        style="@style/Background">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="380dp"
                style="@style/Background">

                <ImageView
                    android:id="@+id/detail_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:src="@color/green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/user_name" />

                <TextView
                    android:id="@+id/detail_name"
                    style="@style/Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/user_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_image" />

                <TextView
                    android:id="@+id/detail_username"
                    style="@style/TextContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/user_username"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_name" />

                <TextView
                    android:id="@+id/tv_repository"
                    style="@style/TextContent"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/user_repository"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_username" />

                <TextView
                    android:id="@+id/detail_repository"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/user_repository"
                    app:layout_constraintStart_toEndOf="@id/tv_repository"
                    app:layout_constraintTop_toBottomOf="@+id/detail_username" />

                <TextView
                    android:id="@+id/tv_location"
                    style="@style/TextContent"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/user_location"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_repository" />

                <TextView
                    android:id="@+id/detail_location"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/user_location"
                    app:layout_constraintStart_toEndOf="@id/tv_location"
                    app:layout_constraintTop_toBottomOf="@id/detail_repository" />

                <TextView
                    android:id="@+id/tv_company"
                    style="@style/TextContent"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/user_company"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_location" />

                <TextView
                    android:id="@+id/detail_company"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/user_company"
                    app:layout_constraintStart_toEndOf="@id/tv_company"
                    app:layout_constraintTop_toBottomOf="@id/detail_location" />

                <TextView
                    android:id="@+id/tv_followers"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/user_followers"
                    app:layout_constraintBottom_toTopOf="@+id/tv_following"
                    app:layout_constraintStart_toEndOf="@+id/detail_followers" />

                <TextView
                    android:id="@+id/detail_followers"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/user_followers"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/detail_following"
                    app:layout_constraintStart_toEndOf="@+id/detail_image" />

                <TextView
                    android:id="@+id/tv_following"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/user_following"
                    app:layout_constraintBottom_toBottomOf="@+id/detail_following"
                    app:layout_constraintStart_toEndOf="@+id/detail_following" />

                <TextView
                    android:id="@+id/detail_following"
                    style="@style/TextContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    android:text="@string/user_following"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/detail_image"
                    app:layout_constraintStart_toEndOf="@+id/detail_image" />

                <Button
                    android:id="@+id/btn_share"
                    style="@style/btn_primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:drawableLeftCompat="@drawable/ic_baseline_share_24"
                    android:text="@string/share"
                    app:layout_constraintBottom_toBottomOf="@+id/detail_image"
                    app:layout_constraintStart_toEndOf="@+id/detail_image"
                    app:layout_constraintTop_toTopOf="@+id/detail_image" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="35dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="gone" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/git_black"
            app:tabTextColor="@color/white"
            app:tabIndicatorHeight="4dp"
            app:tabIndicatorColor="@color/green"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/detail_fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/fav_desc"
        app:layout_anchor="@id/view_pager"
        app:layout_anchorGravity="bottom|end"
        app:fabSize="normal"
        app:srcCompat="@drawable/favorit_toogle" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>